--- a/WebProject/src/main/webapp/main.html
+++ b/WebProject/src/main/webapp/main.html
@@ -99,7 +99,7 @@
 			<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic
 				autem harum eaque aut deserunt pariatur eum ea, sequi minus nam
 				veniam atque et quisquam molestiae aperiam! Iusto, ipsum.</p>
-			<a href="login.html">Login</a> <a href="Signup.jsp">Sign Up</a>
+			<a href="Login.jsp">Login</a> <a href="Signup.jsp">Sign Up</a>
 		</div>
 	</div>
 </body>
